deployment/tcs_issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: tcs-issuer
  name: tcs-issuer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: tcs-issuer
  name: tcs-metrics-service
  namespace: tcs-issuer
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: tcs-issuer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: tcs-issuer
  name: tcs-controller
  namespace: tcs-issuer
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: tcs-issuer
  template:
    metadata:
      annotations:
        sgx.intel.com/quote-provider: aesmd
      labels:
        control-plane: tcs-issuer
    spec:
      containers:
      - args:
        - --leader-elect
        - --zap-devel
        - --zap-log-level=5
        - --metrics-bind-address=:8082
        - --health-probe-bind-address=:8083
        - --user-pin=$USER_PIN
        - --so-pin=$SO_PIN
        command:
        - /tcs-issuer
        image: intel/trusted-certificate-issuer:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8083
          initialDelaySeconds: 10
          periodSeconds: 180
        name: tcs-issuer
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8083
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
            sgx.intel.com/enclave: 1
            sgx.intel.com/epc: 512Ki
          requests:
            cpu: 100m
            memory: 20Mi
            sgx.intel.com/enclave: 1
            sgx.intel.com/epc: 512Ki
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /home/tcs-issuer/tokens
          name: tokens-dir
      serviceAccountName: tcs-issuer-serviceaccount
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /var/lib/tcs-issuer/tokens
          type: DirectoryOrCreate
        name: tokens-dir
